@@ -1,3 +1,8 @@
+2016-07-05  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR c++/71214
+	* c-cppbuiltin.c (c_cpp_builtins): Define __cpp_rvalue_references.
+
 2016-06-03  Release Manager
 
 	* GCC 5.4.0 released.
